[package]
name = "ble-ledly"
version = "0.2.0"
edition = "2021"
authors = ["Vincenzo Buono"]
license = "MIT"
repository = "https://github.com/espressoshock/ble-ledly"
homepage = "https://github.com/espressoshock/ble-ledly"
description = """
A customizable and extensible cross-platform high-level Bluetooth Low Energy
light controller.
"""
readme = "README.md"
keywords = ["ledstrip", "ledlight", "ble", "led", "rgb"]
categories = ["hardware-support"]

[lib]
path = "src/lib.rs"

[dependencies]
btleplug = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "1"
enumflags2 = "0.7"

[features]
all = ["light", "color", "brightness", "hw_animate", "sw_animate"]
default = ["all"]
light = []
color = []
brightness = []
hw_animate = []
sw_animate = []
